objects/Joint_Business_Plan_Product_Lines__c.object
<CustomObject>
    <description>R5 - Joint Business Plan Product Lines</description>
    <fields>
        <fullName>Actual_Stock__c</fullName>
        <description>R5 - Actual Stock</description>
        <label>Actual Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Year_to_Date_Changed_on__c</fullName>
        <description>R5 - Actual Year to Date Changed on field to capture the date when the user changes the field Current Ongoing Year.</description>
        <inlineHelpText>The date the &quot;Actual Sales YTD&quot; is given. Used to calculate Run Rate.</inlineHelpText>
        <label>Date the actual sales YTD is given</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Unit_Name__c</fullName>
        <description>R5 - Business Unit Name</description>
        <label>Business Unit Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>R5 - Business Unit</description>
        <label>Business Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel_Partner_Business_Plan_Status__c</fullName>
        <formula>IF ( (TEXT(Joint_Business_Plan__r.Status__c) == &apos;Closed&apos; || TEXT(Joint_Business_Plan__r.Status__c) == &apos;Obsolete&apos;), &apos;Closed&apos;, TEXT(Joint_Business_Plan__r.Status__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Channel Partner Business Plan Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Ongoing_Year__c</fullName>
        <description>R5 Current_Ongoing_Year</description>
        <inlineHelpText>Update the actual sales @ every business review. Indicate also date of the report to get run rate calculation correct</inlineHelpText>
        <label>Actual Sales Year to Date</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Year_Currency__c</fullName>
        <description>R5 Current_Year_Currency field</description>
        <inlineHelpText>Budget for this product line, this year</inlineHelpText>
        <label>Budget Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division_Name__c</fullName>
        <description>R5 - Division Name</description>
        <label>Division Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>R5 - Division</description>
        <label>Division</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_User__c</fullName>
        <description>Created as part of R8 Channel Partner management</description>
        <formula>Joint_Business_Plan__r.External_User__c</formula>
        <label>External User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filled_fields_count__c</fullName>
        <formula>If(ISBLANK(Business_Unit__c),0,1) +  If(ISNULL( Previous_Year_Currency__c),0,1) + If(ISNULL( Current_Year_Currency__c),0,1) + If(ISNULL( Second_Year_Currency__c),0,1) + 
If(ISNULL( Third_Year_Currency__c),0,1) + If(ISNULL( Current_Ongoing_Year__c),0,1) + If(ISNULL( Forecast_Ongoing_Year__c),0,1) + IF (ISNULL(Run_Rate_On__c), 0, 1)</formula>
        <label>Filled fields count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Ongoing_Year__c</fullName>
        <description>R5 Forecast_Ongoing_Year field</description>
        <inlineHelpText>Update the whole year&apos;s forecast @ every business review</inlineHelpText>
        <label>Forecast Current Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <description>R5 - Master-Detail Relationship to Joint Business Plan</description>
        <inlineHelpText>Business plan this sales plan is connected to</inlineHelpText>
        <label>Business Plan</label>
        <referenceTo>Joint_Business_Plan__c</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Joint_Business_Plan_Product_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Other_Information__c</fullName>
        <description>R5 - Other Information</description>
        <label>Other Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Planned_Stock__c</fullName>
        <description>R5 - Planned Stock</description>
        <label>Planned Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Year_Currency__c</fullName>
        <description>R5 Previous_Year_Currency field</description>
        <inlineHelpText>Sales of this product, previous year</inlineHelpText>
        <label>Sales previous year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Previous_Year__c</fullName>
        <description>R5 Previous Year = value of Starting year - 1</description>
        <formula>TEXT(VALUE(TEXT( Starting_Year__c ))-1)</formula>
        <label>Previous Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Address_Country__c</fullName>
        <description>R5 - Copies Primary Address Country from Account .</description>
        <formula>TEXT( Joint_Business_Plan__r.Account__r.Primary_Address_Country__c )</formula>
        <label>Primary Address Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <description>R5 - Product Group</description>
        <label>Product Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Mix__c</fullName>
        <description>R5 - Product Mix</description>
        <label>Product Mix</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>R5 - Product</description>
        <inlineHelpText>Product as chosen in the market scope. Want to add/remove products? Update Market scope product list and copy content on Business Plan template.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Sales Targets and Results</relationshipLabel>
        <relationshipName>Joint_Business_Plan_Product_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Run_Rate_On__c</fullName>
        <description>R5 - Run Rate Calculation Formula</description>
        <formula>IF (ISNULL(Actual_Year_to_Date_Changed_on__c) , 0, (365  / (  Actual_Year_to_Date_Changed_on__c - DATEVALUE( TEXT(YEAR( Actual_Year_to_Date_Changed_on__c  )) &amp; &quot;-01-01&quot; )))  * Current_Ongoing_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated field; linear projection of Full Year run rate based YTD Sales and Date</inlineHelpText>
        <label>Run Rate Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Year_Currency__c</fullName>
        <description>R5 Second_Year_Currency field</description>
        <inlineHelpText>Budget/ target for this product line, 2nd year</inlineHelpText>
        <label>Target 2nd Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Second_Year__c</fullName>
        <description>R5 Second Year = value of Starting year + 1</description>
        <formula>TEXT(VALUE(TEXT( Starting_Year__c ))+1)</formula>
        <label>2nd Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Year_Product__c</fullName>
        <description>R5 - Unique check</description>
        <label>Starting Year &amp; Product</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Starting_Year__c</fullName>
        <description>R5 Starting_Year</description>
        <label>Current Year</label>
        <picklist>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1992</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1993</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1994</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1995</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1996</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1997</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1998</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1999</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2001</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2002</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2004</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2005</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2006</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2007</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2008</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2009</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2010</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2011</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2013</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2014</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2020</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Lead_Times__c</fullName>
        <description>R5 - Target Lead Times</description>
        <label>Target Lead Times</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Stock__c</fullName>
        <description>R5 - Targeted Stock</description>
        <label>Targeted Stock</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Third_Year_Currency__c</fullName>
        <description>R5 Third_Year_Currency field</description>
        <inlineHelpText>Budget/ target for this product line, 3rd year</inlineHelpText>
        <label>Target 3rd Year</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Third_Year__c</fullName>
        <description>R5 Third Year = value of Starting year +2</description>
        <formula>TEXT(VALUE(TEXT( Starting_Year__c ))+2)</formula>
        <label>3rd Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>of_Completeness__c</fullName>
        <description>R6: To calculate % of completeness by number of  filled fields and total editable fields</description>
        <formula>IF (Filled_fields_count__c == 0, 0, Filled_fields_count__c / (VALUE($Label.Sys_Total_Fields_in_Sales_Target_and_Results)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% of Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Sales Targets and Results</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Joint_Business_Plan__c</columns>
        <columns>Product__c</columns>
        <columns>Current_Ongoing_Year__c</columns>
        <columns>Forecast_Ongoing_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MIX-{0000000}</displayFormat>
        <label>Product Mix</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Targets and Results</pluralLabel>
    <recordTypes>
        <fullName>Freeze_Budget</fullName>
        <active>true</active>
        <description>R5 - Freeze Budget Record Type</description>
        <label>Freeze Budget</label>
    </recordTypes>
    <recordTypes>
        <fullName>Joint_Business_Plan_Product_Lines</fullName>
        <active>true</active>
        <description>R5 - Joint Business Plan Product Lines</description>
        <label>Joint Business Plan Product Lines</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JBP_Status_Closed_Check_SalesTargets</fullName>
        <active>true</active>
        <description>R5 - If Channel Partner Business Plan Status is Closed/Obsolete, then the user should not edit the Sales Targets and Results</description>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c), OR(ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Closed&apos;), 
ISPICKVAL( Joint_Business_Plan__r.Status__c , &apos;Obsolete&apos;) 
))</errorConditionFormula>
        <errorMessage>You cannot save the changes - Channel Partner Business Plan is Closed/Obsolete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_the_fields_to_Edit_When_Active</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT($Setup.ObjectsSaveMode__c.DisabledValidation__c), 
NOT($Setup.ObjectsSaveMode__c.FullLogicDisabled__c),
ISPICKVAL(Joint_Business_Plan__r.Status__c, &apos;Active&apos;),      (ISCHANGED(Current_Year_Currency__c) ||
 ISCHANGED(Starting_Year__c) || 
 ISCHANGED(Second_Year_Currency__c) || 
 ISCHANGED(Third_Year_Currency__c) || 
 ISCHANGED(Previous_Year_Currency__c) ))</errorConditionFormula>
        <errorMessage>You are not allowed to change the values of Current Year,Budget Current Year, Target Second Year, Target Third Year and Sales Previous Year when the channel Business Plan Status is Active</errorMessage>
    </validationRules>
</CustomObject>